# clip-boost-website

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-release.yml
notes/: README.md  WICHTIG-DEPLOY.txt
public/: desktop.ini  validateEnv.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icon/: icon.icns
src/Pages/: AGB.tsx  Home.tsx  Legal.Layout.tsx  Terms.tsx
src/components/: SiteFooter.tsx  SiteHeader.tsx
src/config/: siteLinks.ts
src/config/routes/: README.md
src/pages/: Datenschutz.tsx  Download.tsx  Home.tsx  Impressum.tsx  LegalLayout.tsx
