[package]
name = "clip_boost_website"
version = "0.2.2"
description = "CLiP BOOsT Website Desktop App"
authors = ["Tahifun"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = []
